# iago-suarez.github.io

./: CNAME  README.md  asset-manifest.json  index.html  package-lock.json  package.json
elsed_js/: README.md  index.html  main.cpp
elsed_js/css/: main.css
elsed_js/js/: elsed_js.js  elsed_js.wasm  main.js
public/: index.html
public/elsed_js/: CMakeLists.txt  index.html  manifest.json
public/elsed_js/css/: main.css
public/elsed_js/js/: elsed_js.wasm  main.js
src/: App.css  App.js  Sidebar.css  index.css
src/pages/: 404.js  Elsed.js  Home.js
static/css/: main.28807298.css  main.28807298.css.map  main.51a0f4ce.chunk.css  main.51a0f4ce.chunk.css.map  main.5db7fc0f.chunk.css  main.5db7fc0f.chunk.css.map  main.91b34cc4.css  main.91b34cc4.css.map  main.a20f19c0.chunk.css  main.a20f19c0.chunk.css.map  main.d926c817.css  main.d926c817.css.map  main.e60c3b92.css  main.e60c3b92.css.map
static/js/: 2.3e4284c0.chunk.js  2.3e4284c0.chunk.js.map  2.75574e17.chunk.js  2.75574e17.chunk.js.map  2.be6f96ff.chunk.js  2.be6f96ff.chunk.js.map  2.f148eced.chunk.js  2.f148eced.chunk.js.map  3.3021521b.chunk.js  3.3021521b.chunk.js.map  3.5b2c0be9.chunk.js  3.5b2c0be9.chunk.js.map  3.7f76938b.chunk.js  3.7f76938b.chunk.js.map  3.dc8125ce.chunk.js  3.dc8125ce.chunk.js.map  787.93b0a6bc.chunk.js  787.93b0a6bc.chunk.js.map  main.0eb1c577.js  main.0eb1c577.js.map  main.206518ce.chunk.js  main.206518ce.chunk.js.map  main.21296229.chunk.js  main.21296229.chunk.js.map  main.2616348e.chunk.js  main.2616348e.chunk.js.map  main.3073bf11.chunk.js  main.3073bf11.chunk.js.map  (+54 more)
(+1 files in other folders)
